add barely working UI

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     </header>
     <div>
       <form action="">
+        <label for="text">what weather you wanna know bro ?</label>
         <input
           type="text"
           name="text"
@@ -27,8 +28,15 @@
           placeholder="put your city bro"
           value="anchorage"
         />
-        <button type="submit">submit</button>
+        <button type="submit">u need to click here bro</button>
       </form>
+
+      <div id="weather-main-container">
+        <div id="weather-div">weather</div>
+        <div id="temp-div">temperature</div>
+        <div id="sunrise-div">sunrise</div>
+        <div id="sunset-div">sunset</div>
+      </div>
     </div>
   </body>
 </html>
